--- a/lectures/L26-extras.ipynb
+++ b/lectures/L26-extras.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "L26, Extras - 15-110 CMU-Q, Fall'19, G. Di Caro\n",
+    "\n",
     "***\n",
     "A few examples about **combining multiple plots, of different type, in one figure** to create powerful and flexible representations of data.\n",
     "\n",
