--- a/lectures/L26.ipynb
+++ b/lectures/L26.ipynb
@@ -7,9 +7,9 @@
     "L26 - 15-110 CMU-Q, Fall'19, G. Di Caro\n",
     "\n",
     "***\n",
-    "Today we will look at the aspect of **efficiency** of an alorithm. \n",
+    "Today we will look at the aspects of **efficiency** of an algorithm. \n",
     "\n",
-    "This will take us to introduce the important notion of **computational complexity.**\n",
+    "This will take us to introduce the important notion of **computational complexity** and the use of *Big O* notation\n",
     "\n",
     "***"
    ]
