--- a/lectures/09-trace-debug.ipynb
+++ b/lectures/09-trace-debug.ipynb
@@ -82,7 +82,7 @@
    ],
    "source": [
     "x = 42\n",
-    "print(\"The answer to the life, universe, and everything is\", 42, \".\")"
+    "print(\"The answer to the life, universe, and everything is\", x, \".\")"
    ]
   },
   {
