--- a/lectures/17-dict-II.ipynb
+++ b/lectures/17-dict-II.ipynb
@@ -28,7 +28,7 @@
     "           \"ahmed\": [10,10,6,8,4],\n",
     "           \"nour\": [9,8,4,6,7],\n",
     "           \"carlos\": [10,8,10,5,6],\n",
-    "           \"bob\": [10,9,10,8,5]\n",
+    "           \"jane\": [10,9,10,8,5]\n",
     "          }\n",
     "```\n",
     "\n",
@@ -170,7 +170,7 @@
     "For example, `finalGrades(grades)` should return the dictionary:\n",
     "```\n",
     "{'ahmed': 38, \n",
-    " 'bob': 42, \n",
+    " 'jane': 42, \n",
     " 'carlos': 39, \n",
     " 'mohammed': 32, \n",
     " 'nour': 34}\n",
