Lecture 21: all files

--- a/lectures/21-graphs.ipynb
+++ b/lectures/21-graphs.ipynb
@@ -143,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "AL = {\"a\": [\"b\", \"c\"],\n",
@@ -196,13 +198,17 @@
     "\n",
     "A food web is a networks of preys and predators. This can be naturally represented as a graph by taking each animal to be a node, and edges to be the prey/predator relation. Since this relation is unidirectional, the graph will be directed. The direction chosen is arbitrary, but of course it needs to be consistent. Let's adopt the following convention: there exists an edge from animal A to B if A *is eaten by* B (that is, B is A's predator).\n",
     "\n",
-    "We will use adjacency lists to represent our food web. They keys will be the animals and the values will be a list of that animal's preys."
+    "We will use adjacency lists to represent our food web. They keys will be the animals and the values will be a list of that animal's preys.\n",
+    "\n",
+    "The file used for this example can be downloaded [here](https://web2.qatar.cmu.edu/cs/15110/datasets/florida-foodweb.csv)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "file = open(\"florida-foodweb.csv\")\n",
@@ -239,6 +245,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
